# cpputest

./: .clang-format  .clang-tidy  .cproject  .git-blame-ignore-revs  .gitattributes  .gitignore  .project  .travis.yml  .travis_github_deployer.yml  AUTHORS  CMakeLists.txt  CMakePresets.json  COPYING  ChangeLog  CppUTest.dep  CppUTest.dsp  CppUTest.dsw  CppUTest.mak  CppUTest.sln  CppUTest.vcproj  CppUTest.vcxproj  CppUTestConfig.cmake.build.in  CppUTestConfig.cmake.in  CppUTestConfig.cmake.install.in  CppUTestConfigVersion.cmake.in  CppUTestExtTests.launch  CppUTestExt_tests  CppUTestTests.launch  CppUTest_Bas_tests  CppUTest_VS2008.sln  CppUTest_VS201x.sln  CppUTest_tests.txt  Doxyfile  Makefile  Makefile.2  Makefile.am  Makefile.in  Makefile_CppUTestExt  Makefile_for_old_make  Makefile_using_MakefileWorker  (+45 more)
CppUTest/: CMakeLists.txt  CppUTestGeneratedConfig.h.cmake  cpputest.pc.in
CppUTest/src/: MemoryLeakWarningPlugin.cpp  SimpleMutex.cpp  SimpleString.cpp  TestFailure.cpp  TestFilter.cpp  TestMemoryAllocator.cpp  TestOutput.cpp  TestResult.cpp  Utest.cpp
CppUTest/tests/: CMakeLists.txt
CppUTestExt/: CMakeLists.txt  cpputestext.pc.in
CppUTestExt/src/: CodeMemoryReportFormatter.cpp  GTest.cpp  IEEE754ExceptionsPlugin.cpp  MemoryReportFormatter.cpp  MemoryReporterPlugin.cpp  MockFailure.cpp  MockNamedValue.cpp  MockSupportPlugin.cpp  MockSupport_c.cpp  OrderedTest.cpp
CppUTestExt/tests/: CMakeLists.txt
examples/: .cdtproject  .project  CMakeLists.txt  CppUTestExample.dsw  CppUTestExample.sln  CppUTestExample_VS2008.sln  CppUTestExample_VS201x.sln  CppUTestExamples_tests  Makefile  Makefile_ExamplesWithCppUTestInstalled.mk  README.txt
examples/AllTests/: AllTests.cpp  AllTests.dsp  AllTests.h  AllTests.vcproj  AllTests.vcxproj  AllTests_VC2008.vcproj  CMakeLists.txt  CircularBufferTest.cpp  EventDispatcherTest.cpp  FEDemoTest.cpp  HelloStub.c  HelloTest.cpp  Makefile  MixInApplyTest.cpp  MixInTest.cpp  MixInTest.h  MockDocumentationTest.cpp  MockPrinter.h  PrinterTest.cpp  RunAllTests.sh
examples/ApplicationLib/: AllTests.h  ApplicationLib.dsp  ApplicationLib.vcproj  ApplicationLib.vcxproj  ApplicationLib_VC2008.vcproj  CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h  CircularBufferTest.cpp  EventDispatcher.cpp  EventDispatcher.h  EventDispatcherTest.cpp  ExamplesNewOverrides.h  HelloTest.cpp  Makefile  MockDocumentationTest.cpp  MockPrinter.h  MockSabreSessionSocket.h  Printer.cpp  Printer.h  PrinterTest.cpp  SimpleStringExtensions.h  SimpleStringExtensionsTest.cpp  hello.c  hello.h
examples/lib/: Makefile
examples/nbproject/: .gitignore  configurations.xml  project.xml
src/CppUTest/: CMakeIntegration-README.md  CMakeLists.txt  CommandLineArguments.cpp  CommandLineTestRunner.cpp  CompositeTestOutput.cpp  ConsoleTestOutput.cpp  CrashReporter.cpp  EqualsFailure.cpp  FailableMemoryAllocator.cpp  Failure.cpp  FindLeaksMalloc.c  JUnitTestOutput.cpp  Makefile  MemoryLeakAllocator.cpp  MemoryLeakDetector.cpp  MemoryLeakWarningPlugin.cpp  NullTest.cpp  SimpleMutex.cpp  SimpleString.cpp  SimpleStringExtensions.cpp  SimpleStringInternalCache.cpp  TeamCityTestOutput.cpp  TestDownlevelApi.cpp  TestFailure.cpp  TestFilter.cpp  TestHarness_c.cpp  TestInstaller.cpp  TestMemoryAllocator.cpp  TestMutex.cpp  TestOutput.cpp  TestOutputDecorator.cpp  TestPlugin.cpp  TestRegistry.cpp  TestResult.cpp  TestTestingFixture.cpp  UnitTestHarness.dsp  Utest.cpp
src/CppUTestExt/: Actual.cpp  ActualCall.cpp  CMakeLists.txt  CodeMemoryReportFormatter.cpp  CppUTestActual.cpp  CppUTestExpect.cpp  Expect.cpp  ExpectedCall.cpp  GTest.cpp  GTestConvertor.cpp  IEEE754ExceptionsPlugin.cpp  MemoryBufferContainer.cpp  MemoryReportAllocator.cpp  MemoryReportFormatter.cpp  MemoryReporterPlugin.cpp  MockActualCall.cpp  MockActualCallsQueue.cpp  MockActualFunctionCall.cpp  MockExpectedCall.cpp  MockExpectedCallsList.cpp  MockExpectedFunctionCall.cpp  MockExpectedFunctionsList.cpp  MockFailure.cpp  MockFunctionCall.cpp  MockFunctionCall.d  MockNamedValue.cpp  MockSupport.cpp  MockSupportPlugin.cpp  MockSupport_c.cpp  OrderedTest.cpp  TestDouble.cpp  TestDoubleParameter.cpp  TestSupport.cpp
tests/: AllTests.cpp  AllTests.dep  AllTests.dsp  AllTests.h  AllTests.mak  AllTests.vcproj  AllTests.vcxproj  AllocLetTestFree.c  AllocLetTestFree.h  AllocLetTestFreeTest.cpp  AllocationInCFile.c  AllocationInCFile.h  AllocationInCppFile.cpp  AllocationInCppFile.h  CMakeLists.txt  CheatSheetTest.cpp  CommandLineArgumentsTest.cpp  CommandLineTestRunnerTest.cpp  CompositeTestOutputTest.cpp  FailableMemoryAllocatorTest.cpp  FailureTest.cpp  FunctionPointPluginerTest.cpp  GenericTest.h  JUnitOutputTest.cpp  LongJumpTest.cpp  Makefile  MemoryLeakAllocatorTest.cpp  MemoryLeakDetectorTest.cpp  MemoryLeakOperatorOverloadsTest.cpp  MemoryLeakWarningTest.cpp  MemoryOperatorOverloadTest.cpp  MixInApplyTest.cpp  MixInTest.cpp  MixInTest.h  NullTestTest.cpp  PluginTest.cpp  PreprocessorTest.cpp  RunAllTests.sh  SetPluginTest.cpp  SimpleMutexTest.cpp  (+20 more)
tests/CppUTest/: AllTests.cpp  AllTests.h  AllocLetTestFree.c  AllocLetTestFree.h  AllocLetTestFreeTest.cpp  AllocationInCFile.c  AllocationInCFile.h  AllocationInCppFile.cpp  AllocationInCppFile.h  CMakeLists.txt  CheatSheetTest.cpp  CommandLineArgumentsTest.cpp  CommandLineTestRunnerTest.cpp  CompatabilityTests.cpp  DummyMemoryLeakDetector.cpp  DummyMemoryLeakDetector.h  JUnitOutputTest.cpp  MemoryLeakDetectorTest.cpp  MemoryLeakWarningTest.cpp  MemoryOperatorOverloadTest.cpp  MultiGroupTest.cpp  PluginTest.cpp  PreprocessorTest.cpp  SetPluginTest.cpp  ShuffleTest.cpp  SimpleMutexTest.cpp  SimpleStringCacheTest.cpp  SimpleStringTest.cpp  TeamCityOutputTest.cpp  TestFailureListTest.cpp  TestFailureNaNTest.cpp  TestFailureTest.cpp  TestFilterTest.cpp  TestHarness_cTest.cpp  TestHarness_cTestCFile.c  TestInstallerTest.cpp  TestMemoryAllocatorTest.cpp  TestOutputTest.cpp  TestRegistryTest.cpp  TestResultTest.cpp  (+4 more)
tests/CppUTestExt/: ActualCallsQueueTest.cpp  AllTests.cpp  AllTests.h  AllTestsWithGTest.cpp  CMakeLists.txt  CodeMemoryReportFormatterTest.cpp  GMockTest.cpp  (+61 more)
(+407 files in other folders)
